# Maman14

./: CMakeLists.txt  Makefile  assembler  code_conversion.c  code_conversion.h  data_struct.c  data_struct.h  errors.c  errors.h  first_pass.c  first_pass.h  globals.c  globals.h  handle_text.c  handle_text.h  lexer.h  macros.c  main.c  preproc.h  run_tests.sh  second_pass.c  second_pass.h  symbol_table.c  symbol_table.h  table.c  table.h  test.as  test_everything.as  test_maman.am  test_maman.as  test_maman.as.ext  test_maman.as.ob  test_matrices.as  util.c  util.h
MMN14_tests/: test_all_combined.am  test_all_combined.as  test_all_combined.as.ext  test_all_combined.as.ob  test_entry_extern.am  test_entry_extern.as  test_entry_extern.as.ext  test_entry_extern.as.ob  test_instructions.am  test_label_errors.am  test_macros.am  test_macros.as  test_macros.as.ob  test_matrix_errors.am  test_valid_directives.am  test_valid_directives.as.ob
final_tests/: test_all.sh  test_data_consecutive_commas.am  test_data_inv_input.am  test_duplo_label.am  test_extern_not_declared.am  test_immediate_not_allowed.am  test_immediate_not_allowed.as.ob  test_invalid_opcode.as  test_label_starts_with_dig.am  test_label_starts_with_dig.as.ob  test_label_too_long.as  test_line_too_long.am  test_line_too_long.as  test_macro_res_name.am  test_macro_res_name.as  test_macro_res_name.as.ob  test_mat_invalid_size.am  test_missing_operand.as  test_missing_operand.as.ob  test_multiple_errors.am  test_reserved_label.am  test_string_empty.as  test_string_empty.as.ob  test_string_no_closing_quote.am  (+2 more)
(+54 files in other folders)
